--- a/packages/WalkingPromotor/app/src/debug/res/values/strings.xml
+++ b/packages/WalkingPromotor/app/src/debug/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-  <string name="app_name">[DEBUG] Walking Promoter</string>
+  <string name="app_name">[DEBUG] 運動コミュニケーション</string>
 </resources>
